# Graphics

./: README.md  Tour_34357.kml
exercise_01/cmake/: common.cmake
exercise_01/src/: exercise123.cpp  exercise123.h  exercise4a.cpp  exercise4b.cpp  exercise4b.h  mainwindow.cpp  mainwindow.h
exercise_01/src/util/: imageview.cpp
exercise_02/: CMakeLists.txt  solution.md
exercise_02/src/: exercise5.cpp  exercise5.h  mainwindow.cpp
exercise_03/: CMakeLists.txt
exercise_03/src/: abstractglexercise.cpp  abstractglexercise.h  exercise11.cpp  exercise11.h  exercise12.cpp  exercise12.h  exercise13.cpp  exercise13.h  main.cpp  mainwindow.cpp  mainwindow.h  mathmacros.h  polygonaldrawable.cpp
exercise_04/: CMakeLists.txt
exercise_04/src/: abstractexercise.cpp  abstractexercise.h  abstractglexercise.cpp  abstractglexercise.h  box.cpp  box.h  exercise15.cpp  exercise15.h  exercise16.cpp  exercise16.h  exercise17.cpp  exercise17.h  main.cpp  mainwindow.cpp  mainwindow.h  mathdefinitions.h  threedobject.cpp  threedobject.h
exercise_05/: CMakeLists.txt
exercise_05/cmake/: common.cmake
exercise_05/src/: abstractGLexercise.cpp  abstractGLexercise.h  abstractexercise.cpp  exercise18.cpp  exercise18.h  exercise19.cpp  exercise19.h  halfedgestructure.cpp  halfedgestructure.h  main.cpp  mainwindow.cpp  polygonaldrawable.h
exercise_06/: CMakeLists.txt
exercise_06/cmake/: FindGLEW.cmake
exercise_06/data/: fragmentshader.txt  phong.frag  phong.vert  toon.frag  toon.vert
exercise_06/src/: abstractGLexercise.cpp  abstractGLexercise.h  abstractexercise.cpp  abstractexercise.h  exercise20.cpp  exercise20.h  exercise21.cpp  exercise21.h  halfedgestructure.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mathmacros.h  shaderutils.cpp  shaderutils.h  vertexreuse.cpp  vertexreuse.h
Übung 1/: CMakeLists.txt
Übung 1/src/: exercise4a.h  stable.h
Übung 1/src/util/: imageview.h
